Fix max-width for list item text and info window text to avoid layout breaks

--- a/src/App.css
+++ b/src/App.css
@@ -245,7 +245,7 @@ th {
       cursor: pointer; }
     .list-item .content-container .info-column {
       padding-right: 10px;
-      max-width: 211px; }
+      max-width: 200px; }
       .list-item .content-container .info-column .venue-name {
         margin-bottom: 3px;
         cursor: pointer; }
@@ -478,7 +478,7 @@ th {
 
 .iw-photo {
   background: #f7b600;
-  max-height: 50px;
+  height: 50px;
   border-radius: 40px; }
 
 .iw-content {
@@ -489,7 +489,8 @@ th {
   font-family: "proxima_nova_bold", Helvetica, sans-serif;
   color: #247f9e;
   font-size: 1.2rem;
-  line-height: 19.5px; }
+  line-height: 19.5px;
+  font-weight: 500; }
 
 .iw-list {
   list-style-type: none;
