--- a/src/scss/_ListItem.scss
+++ b/src/scss/_ListItem.scss
@@ -38,7 +38,7 @@
 
     .info-column {
       padding-right: 10px;
-      max-width: 211px;
+      max-width: 200px;
 
       .venue-name {
         margin-bottom: 3px;
